--- a/index.html
+++ b/index.html
@@ -120,25 +120,42 @@
 
         <div class="experience-container">
             <div class="experience-box">
-                <h3>Associate Software Engineer</h3>
-                <h4>MAQ Software</h4>
-                <h5>(05/2022 - 02/2023)</h5>
-                <p>Contributed to client projects by migrating Oozie to Azkaban, transforming pig/hive datasets to
-                    Spark, testing data flows, increasing code-coverage, resolving Jira tickets, customizing Azure
-                    DevOps pipelines, and developing a ReactJS and C# web portal for employee training management.</p>
-                <!-- <a href="#" class="btn">Read More</a> -->
-            </div>
+                <h3>Technical Associate</h3>
+                <h4>Merilytics</h4>
+                <h5>(07/2023 - 09/2023)</h5>
+                <p>I oversaw a project to migrate data from SQL Server to Azure, coordinating the process with
+                    precision. Creating ER diagrams, detailed data investigation, and a complete summary table to
+                    support the development of dimension and fact tables were all parts of my job description. To
+                    achieve the best possible outcomes, this approach required thorough data transformation and
+                    cleansing.</p>
+                </div>
 
-            <div class="experience-box">
-                <h3>Full Stack Traniee - Tech Stack Program</h3>
-                <h4>HighRadius</h4>
-                <h5>(01/2022 - 04/2022)</h5>
-                <p>Built a full stack AI-Enables B2B cloud application by developing a deep understanding of all aspects
-                    of product
-                    development such as designing a great user experience and building appropriate data models.</p>
-                <!-- <a href="#" class="btn">Read More</a> -->
-            </div>
-        </div>
+                <div class="experience-container">
+                    <div class="experience-box">
+                        <h3>Associate Software Engineer</h3>
+                        <h4>MAQ Software</h4>
+                        <h5>(05/2022 - 02/2023)</h5>
+                        <p>Contributed to client projects by migrating Oozie to Azkaban, transforming pig/hive datasets
+                            to
+                            Spark, testing data flows, increasing code-coverage, resolving Jira tickets, customizing
+                            Azure
+                            DevOps pipelines, and developing a ReactJS and C# web portal for employee training
+                            management.</p>
+                        <!-- <a href="#" class="btn">Read More</a> -->
+                    </div>
+
+                    <div class="experience-box">
+                        <h3>Full Stack Traniee - Tech Stack Program</h3>
+                        <h4>HighRadius</h4>
+                        <h5>(01/2022 - 04/2022)</h5>
+                        <p>Built a full stack AI-Enables B2B cloud application by developing a deep understanding of all
+                            aspects
+                            of product
+                            development such as designing a great user experience and building appropriate data models.
+                        </p>
+                        <!-- <a href="#" class="btn">Read More</a> -->
+                    </div>
+                </div>
     </secction>
 
     <!-- project section design -->
@@ -209,7 +226,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="https://formspree.io/f/xzbqqdov" method="POST" >
+        <form action="https://formspree.io/f/xzbqqdov" method="POST">
             <div class="input-box">
                 <input type="text" name="name" placeholder="Full Name" required>
                 <input type="email" name="email" placeholder="Email Address" required>
