--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Divya Kohli Portfolio</title>
+    <title>Personal Portfolio Website</title>
 
     <!-- box icons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
@@ -34,9 +34,9 @@
     <!-- home section design -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, My name is</h3>
+            <h3>Hello, It's Me</h3>
             <h1>Divya kohli</h1>
-            <h3>And I'm <span class="multiple-text"></span></h3>
+            <h3>I'm <span class="multiple-text"></span></h3>
             <!-- <p>Passionate about data science, I am seeking a challenging role where I can leverage my skills in data
                 analysis and visualization to make meaningful insights and drive impactful decisions. I am highly
                 motivated to continuously learn and excel in the field, staying up-to-date with the latest advancements
@@ -120,42 +120,25 @@
 
         <div class="experience-container">
             <div class="experience-box">
-                <h3>Technical Associate</h3>
-                <h4>Merilytics</h4>
-                <h5>(07/2023 - 09/2023)</h5>
-                <p>I oversaw a project to migrate data from SQL Server to Azure, coordinating the process with
-                    precision. Creating ER diagrams, detailed data investigation, and a complete summary table to
-                    support the development of dimension and fact tables were all parts of my job description. To
-                    achieve the best possible outcomes, this approach required thorough data transformation and
-                    cleansing.</p>
-                </div>
+                <h3>Associate Software Engineer</h3>
+                <h4>MAQ Software</h4>
+                <h5>(05/2022 - 02/2023)</h5>
+                <p>Contributed to client projects by migrating Oozie to Azkaban, transforming pig/hive datasets to
+                    Spark, testing data flows, increasing code-coverage, resolving Jira tickets, customizing Azure
+                    DevOps pipelines, and developing a ReactJS and C# web portal for employee training management.</p>
+                <!-- <a href="#" class="btn">Read More</a> -->
+            </div>
 
-                <div class="experience-container">
-                    <div class="experience-box">
-                        <h3>Associate Software Engineer</h3>
-                        <h4>MAQ Software</h4>
-                        <h5>(05/2022 - 02/2023)</h5>
-                        <p>Contributed to client projects by migrating Oozie to Azkaban, transforming pig/hive datasets
-                            to
-                            Spark, testing data flows, increasing code-coverage, resolving Jira tickets, customizing
-                            Azure
-                            DevOps pipelines, and developing a ReactJS and C# web portal for employee training
-                            management.</p>
-                        <!-- <a href="#" class="btn">Read More</a> -->
-                    </div>
-
-                    <div class="experience-box">
-                        <h3>Full Stack Traniee - Tech Stack Program</h3>
-                        <h4>HighRadius</h4>
-                        <h5>(01/2022 - 04/2022)</h5>
-                        <p>Built a full stack AI-Enables B2B cloud application by developing a deep understanding of all
-                            aspects
-                            of product
-                            development such as designing a great user experience and building appropriate data models.
-                        </p>
-                        <!-- <a href="#" class="btn">Read More</a> -->
-                    </div>
-                </div>
+            <div class="experience-box">
+                <h3>Full Stack Traniee - Tech Stack Program</h3>
+                <h4>HighRadius</h4>
+                <h5>(01/2022 - 04/2022)</h5>
+                <p>Built a full stack AI-Enables B2B cloud application by developing a deep understanding of all aspects
+                    of product
+                    development such as designing a great user experience and building appropriate data models.</p>
+                <!-- <a href="#" class="btn">Read More</a> -->
+            </div>
+        </div>
     </secction>
 
     <!-- project section design -->
@@ -226,7 +209,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="https://formspree.io/f/xzbqqdov" method="POST">
+        <form action="https://formspree.io/f/xnqyynob" method="POST">
             <div class="input-box">
                 <input type="text" name="name" placeholder="Full Name" required>
                 <input type="email" name="email" placeholder="Email Address" required>
@@ -235,7 +218,7 @@
                 <input type="number" name="number" placeholder="Mobile Number" required>
                 <input type="text" name="emailSubject" placeholder="Email Subject" required>
             </div>
-            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+            <textarea name="" id="" cols="30" rows="10" name="message" placeholder="Your Message" required></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
@@ -243,8 +226,7 @@
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <!-- <p>Copyright &copy; 2023 by Divya Kohli | All Rights Reserved.</p> -->
-            <!-- <p>Home</p> -->
+            <p>Copyright &copy; 2023 by Divya Kohli | All Rights Reserved.</p>
         </div>
 
         <div class="footer-iconTop">
